Bug 1712665 - Ensure we reset the EGLSurface on new CompositorWidgetDelegate on X11/EGL, r=stransky

To ensure we don't freeze when the compositing state changes and
makes a similar call in `Create()` redundant.

Note: we can't do this in `OnCompositedChanged()` as it gets called
too early.

Differential Revision: https://phabricator.services.mozilla.com/D123792